[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"
default-run = "rust-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
cdb = "0.6.0"
chrono = "0.4.31"
md5 = "0.7.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "rust-app"
path = "src/main.rs"
